<resources>
    <string name="app_name">Palette_Maker</string>

    <string name="new_palette">New Palette</string>

    <string name="popular_palette_1">Cyberpunk</string>
    <string name="popular_palette_2">Sky</string>
    <string name="popular_palette_3">Biola</string>
    <string name="popular_palette_4">America</string>

    <string name="open_popular_1">Open Cyberpunk Palette</string>
    <string name="open_popular_2">Open Sky Palette</string>
    <string name="open_popular_3">Open Biola Palette</string>
    <string name="open_popular_4">Open America Palette</string>

    <string name="favorite_palette_1">Favorite 1</string>
    <string name="favorite_palette_2">Favorite 2</string>
    <string name="favorite_palette_3">Favorite 3</string>
    <string name="favorite_palette_4">Favorite 4</string>

    <string name="open_favorite_1">Open Favorite Palette 1</string>
    <string name="open_favorite_2">Open Favorite Palette 2</string>
    <string name="open_favorite_3">Open Favorite Palette 3</string>
    <string name="open_favorite_4">Open Favorite Palette 4</string>

    <string name="palette_title">Palette Maker</string>
    <string name="base_color">Base Color</string>
    <string name="color_details">RGB: 135, 17, 17\nHSV: 0°, 87.4%, 52.9%</string>
    <string name="popular">Popular</string>
    <string name="favorite">Favorite</string>
    <string name="contrast">Contrast</string>
    <string name="export">Export</string>
    <string name="hex_main">#871111</string>
    <string name="hex_one">#781717</string>
    <string name="hex_two">#602525</string>
    <string name="hex_three">#914A4A</string>
    <string name="hex_four">#3D2765</string>
    <string name="hex_five">#604E81</string>
    <string name="hex_six">#2F1067</string>
    <string name="main_color_button">Select Main Color</string>
    <string name="color_wheel_desc">Color Wheel</string>
    <string name="main_color_hint">#ABCDEF</string>
    <string name="generated_colors_title">Palette</string>
    <string name="color_contrast">Color Contrast</string>
    <string name="contrast_info">Selected Colors:\n#871111, #2F1067\nContrast Ratio: 3.14159</string>
    <string name="hello_world">Hello World</string>
    <string name="back_tick">&lt;</string>
    <string name="contrast_text_hint">Text for color contrast testing</string>

    <string name="image_color_picker">Image</string>
    <string name="image_palette_title">Select Color From Image</string>
    <string name="image_picker">Pick Image</string>

</resources>