<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackgroundFloating"
    tools:context=".ImageColorSelector">

    <TextView
        android:id="@+id/textView7"
        android:layout_width="88dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:text="@string/generated_colors_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="115dp"
        android:background="?attr/colorPrimary"
        android:contextClickable="false"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/black"
        app:titleTextColor="@color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="128dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="149dp"
        android:layout_marginBottom="33dp"
        android:text="@string/image_palette_title"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="34sp"
        android:textStyle="bold"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.452"
        app:layout_constraintStart_toStartOf="@+id/toolbar"
        app:layout_constraintTop_toTopOf="@+id/toolbar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="229dp"
        android:layout_height="210dp"
        android:layout_marginTop="132dp"
        android:contentDescription="@string/image_picker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <EditText
        android:id="@+id/editColor"
        android:layout_width="116dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:autofillHints="@string/main_color_hint"
        android:ems="10"
        android:hint="@string/main_color_hint"
        android:inputType="text"
        android:text="@string/hex_main"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button0_p" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button0_p"
        android:layout_width="116dp"
        android:layout_height="50dp"
        android:layout_marginStart="28dp"
        android:contentDescription="@string/main_color_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="116dp"
        android:layout_height="22dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="@string/base_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="213dp"
        android:layout_height="71dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="4dp"
        android:text="@string/color_details"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editColor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/favorite"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:layout_marginEnd="48dp"
        android:background="#602525"
        android:text="@string/hex_two"
        android:textColorLink="#281845"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_palette" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button4"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:layout_marginEnd="48dp"
        android:background="#3D2765"
        android:text="@string/hex_four"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_color_picker" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/new_palette"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="48dp"
        android:background="#781717"
        android:backgroundTint="#8E4848"
        android:text="@string/hex_one"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:strokeColor="#672B2B" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/image_color_picker"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:layout_marginEnd="48dp"
        android:background="#390A0A"
        android:backgroundTint="#6C2B2B"
        android:text="@string/hex_three"
        android:textColorHighlight="#914A4A"
        android:textColorLink="#751F1F"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/favorite" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button5"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:layout_marginEnd="48dp"
        android:background="#604E81"
        android:text="@string/hex_five"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button6"
        android:layout_width="88dp"
        android:layout_height="33dp"
        android:layout_marginEnd="48dp"
        android:background="#2F1067"
        android:text="@string/hex_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:layout_width="128dp"
        android:layout_height="70dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="gotoFavorites"
        android:text="@string/favorite"
        app:icon="@android:drawable/btn_star_big_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="128dp"
        android:layout_height="70dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:onClick="gotoContrast"
        android:text="@string/contrast"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:text="@string/export"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

</androidx.constraintlayout.widget.ConstraintLayout>
